allow for pre-skopos programs

--- a/GameData/RP-1/Programs/Programs.cfg
+++ b/GameData/RP-1/Programs/Programs.cfg
@@ -347,8 +347,7 @@ RP0_PROGRAM
 RP0_PROGRAM
 {
 	name = CommercialApplications1
-	isDisabled = true
-	title = Early Commercial Applications (Deprecated)
+	title = Early Commercial Applications
 	description = Although the earliest satellites were launched through government programs, commercial uses had been envisioned for a long time. Through this program, you will launch the earliest iterations of commercial-use satellites. With wildly varying needs, each satellite is dedicated to a specific requirement, typically with far more focused requirements than the earlier, broader scientific satellites. 
 	requirementsPrettyText = Complete Early Satellites program
 	objectivesPrettyText = Launch the first commercial-use satellites and build a satellite communication network. 
@@ -401,7 +400,8 @@ RP0_PROGRAM
 RP0_PROGRAM
 {
 	name = SkoposCommercialApplications0
-	title = Early Commercial Applications
+	isDisabled = true
+	title = Early Commercial Applications (Skopos)
 	description = Although the earliest satellites were launched through government programs, commercial uses had been envisioned for a long time. Through this program, you will launch the earliest iterations of commercial-use satellites. With wildly varying needs, each satellite is dedicated to a specific requirement, typically with far more focused requirements than the earlier, broader scientific satellites. <br><color=red>Author's Note: These contracts will require a satellite relay to be maintained for ONE YEAR.</color>
 	requirementsPrettyText = Complete Early Satellites program
 	objectivesPrettyText = Launch the first commercial-use satellites and build a satellite communication network. 
@@ -563,8 +563,7 @@ RP0_PROGRAM
 RP0_PROGRAM
 {
 	name = CommercialApplications2
-	isDisabled = true
-	title = Advanced Commercial Applications (Deprecated)
+	title = Advanced Commercial Applications
 	description = Geosynchronous, Geostationary, Molniya, and Tundra orbits have the potential to improve satellite coverage and simplify ground antenna tracking. This program tasks you with testing these orbits, launching satellites into them for commercial customers, and creating a 3 or 4 satellite Geostationary or Molniya Network for communication.
 	requirementsPrettyText = Complete the Early Commercial Applications Program
 	objectivesPrettyText = Complete a Geostationary or Molniya Communications Network.
@@ -617,7 +616,8 @@ RP0_PROGRAM
 RP0_PROGRAM
 {
 	name = SkoposCommercialApplications1
-	title = First Generation Commercial Applications
+	isDisabled = true
+	title = First Generation Commercial Applications (Skopos)
 	description = Geosynchronous, Geostationary, Molniya, and Tundra orbits have the potential to improve satellite coverage and simplify ground antenna tracking. This program tasks you with testing these orbits, launching satellites into them for commercial customers, and creating a satellite network for communication.<br><color=red>Author's Note: These contracts will require a satellite relay to be maintained FOREVER.</color>
 	requirementsPrettyText = Complete the Early Commercial Applications Program
 	objectivesPrettyText = Complete a First Generation Commercial Satellite Communications Network.
