--- a/GameData/RP-1/Programs/Programs.cfg
+++ b/GameData/RP-1/Programs/Programs.cfg
@@ -679,7 +679,8 @@ RP0_PROGRAM
 RP0_PROGRAM
 {
 	name = SkoposCommercialApplications2
-	title = Second Generation Commercial Applications
+ 	isDisabled = true
+	title = Second Generation Commercial Applications (Skopos)
 	description = Geosynchronous, Geostationary, Molniya, and Tundra orbits have the potential to improve satellite coverage and simplify ground antenna tracking. This program tasks you with testing these orbits, launching satellites into them for commercial customers, and creating a satellite network for communication.<br><color=red>Author's Note: These contracts will require a satellite relay to be maintained FOREVER.</color>
 	requirementsPrettyText = Complete the First Generation Commercial Applications Program
 	objectivesPrettyText = Complete a Second Generation Commercial Satellite Communications Network.
@@ -740,7 +741,8 @@ RP0_PROGRAM
 RP0_PROGRAM
 {
 	name = SkoposCommercialApplications3
-	title = Third Generation Commercial Applications
+ 	isDisabled = true
+	title = Third Generation Commercial Applications (Skopos)
 	description = Geosynchronous, Geostationary, Molniya, and Tundra orbits have the potential to improve satellite coverage and simplify ground antenna tracking. This program tasks you with testing these orbits, launching satellites into them for commercial customers, and creating a satellite network for communication.<br><color=red>Author's Note: These contracts will require a satellite relay to be maintained FOREVER.</color>
 	requirementsPrettyText = Complete the Second Generation Commercial Applications Program
 	objectivesPrettyText = Complete a Third Generation Commercial Satellite Communications Network.
