--- a/GameData/RP-1/Programs/Programs.cfg
+++ b/GameData/RP-1/Programs/Programs.cfg
@@ -347,7 +347,7 @@ RP0_PROGRAM
 RP0_PROGRAM
 {
 	name = CommercialApplications1
-	title = Early Commercial Applications
+	title = Early Commercial Applications (Non-Skopos)
 	description = Although the earliest satellites were launched through government programs, commercial uses had been envisioned for a long time. Through this program, you will launch the earliest iterations of commercial-use satellites. With wildly varying needs, each satellite is dedicated to a specific requirement, typically with far more focused requirements than the earlier, broader scientific satellites. 
 	requirementsPrettyText = Complete Early Satellites program
 	objectivesPrettyText = Launch the first commercial-use satellites and build a satellite communication network. 
@@ -568,7 +568,7 @@ RP0_PROGRAM
 RP0_PROGRAM
 {
 	name = CommercialApplications2
-	title = Advanced Commercial Applications
+	title = Advanced Commercial Applications (Non-Skopos)
 	description = Geosynchronous, Geostationary, Molniya, and Tundra orbits have the potential to improve satellite coverage and simplify ground antenna tracking. This program tasks you with testing these orbits, launching satellites into them for commercial customers, and creating a 3 or 4 satellite Geostationary or Molniya Network for communication.
 	requirementsPrettyText = Complete the Early Commercial Applications Program
 	objectivesPrettyText = Complete a Geostationary or Molniya Communications Network.
