--- a/Source/Tech Tree/Parts Browser/data/Stock__RO_Config.json
+++ b/Source/Tech Tree/Parts Browser/data/Stock__RO_Config.json
@@ -4525,7 +4525,7 @@
     {
         "name": "fuelLine",
         "title": "FTX-2 External Fuel Duct",
-        "description": "New breakthroughs at FLOOYD Dynamics have made the FTX Fuel Duct a reality. Altough criticized by some as being no more than 'a sewage pipe painted yellow', most agree that the yellow is a relatively nice color, and that fuel lines are indeed able to pump fuel from side-mounted fuel tanks. After the recall of the FTX-1 series, All FTX-2 lines have arrows painted on to indicate the fuel flow direction, so engineers can tell which way around they are supposed to go.",
+        "description": "New breakthroughs at FLOOYD Dynamics have made the FTX Fuel Duct a reality. Although criticized by some as being no more than 'a sewage pipe painted yellow', most agree that the yellow is a relatively nice color, and that fuel lines are indeed able to pump fuel from side-mounted fuel tanks. After the recall of the FTX-1 series, All FTX-2 lines have arrows painted on to indicate the fuel flow direction, so engineers can tell which way around they are supposed to go.",
         "mod": "Stock (RO Config)",
         "cost": 150,
         "entry_cost": 3000,
